fix overflow

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+body {
+  overflow-x: hidden;
+}
 .font-1 {
   font-family: "Merriweather", serif;
 }
